--- a/market_B/css/marketB.css
+++ b/market_B/css/marketB.css
@@ -1,69 +1,67 @@
 @font-face {
-	font-family: 'Pretendard';
-	src: url(../font/Pretendard-Light.woff2) format('woff');
-	font-weight: 300;
-	font-style: normal;
+  font-family: 'Pretendard';
+  src: url(../font/Pretendard-Light.woff2) format('woff');
+  font-weight: 300;
+  font-style: normal;
 }
 
 
 @font-face {
-	font-family: 'Pretendard';
-	src: url(../font/Pretendard-Regular.woff2) format('woff');
-	font-weight: 400;
-	font-style: normal;
-}
-
-
-@font-face {
-	font-family: 'Pretendard';
-	src: url(../font/Pretendard-Medium.woff2) format('woff');
-	font-weight: 500;
-	font-style: normal;
-}
-
-
-@font-face {
-	font-family: 'Pretendard';
-	src: url(../font/Pretendard-SemiBold.woff2) format('woff');
-	font-weight: 600;
-	font-style: normal;
-}
-
-*{
-  box-sizing: border-box;
-}
-body  {
-	font-family: Pretendard;
-	font-size: 1rem;
+  font-family: 'Pretendard';
+  src: url(../font/Pretendard-Regular.woff2) format('woff');
   font-weight: 400;
-	color: #000;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url(../font/Pretendard-Medium.woff2) format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url(../font/Pretendard-SemiBold.woff2) format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+
+
+body * {
+  font-family: Pretendard;
+  font-weight: 400;
+  color: #000;
+  box-sizing: border-box;
 }
 
 body a {
   text-decoration: none;
-  color:#000;
-  
+  color: #000;
+
 }
 
 
+
 header {
-  clear: both;
+
   position: relative;
   z-index: 100;
   box-sizing: border-box;
-  height: 90px;
   border-bottom: 1px solid #efefef;
-  border:1px solid red;
+  /* border:1px solid red; */
   background: #fff;
 
 }
 
 .head {
-  display:flex;
+  display: flex;
   flex-wrap: nowrap;
-  position:absolute;
-  left:140px;
-  top: 30px;
+  height: 120px;
+  margin-left: 200px;
+  margin-top: 40px;
 }
 
 .search {
@@ -111,25 +109,529 @@ form {
   text-indent: -100000px;
 }
 
-.gnb_pc {
-  border:1px solid red;
-  position:relative;
-  height: 50px;
+.head-gnb {
+
+  position: relative;
+  height: 70px
 }
 
 .head_list {
-  position:absolute;
+  position: absolute;
   left: 140px;
 }
+
 .head_list li a {
   display: block;
-  padding: 0 20px;
-  font-size: 18px;
-  line-height: 50px;
-  border:1px solid red;
+  padding: 0 22px;
+  font-size: 1.2rem;
+  line-height: 70px;
+  /* border:1px solid red; */
   color: #121212;
   font-weight: 500;
 }
+
+
+/* 여기부터 새로운 gnbcss */
+
+
+
+.head-gnb {
+  position: relative;
+  box-sizing: border-box;
+  z-index: 99;
+  height: 52px;
+  border-bottom: 1px solid #efefef;
+  background: #fff;
+  transition: margin 0.2s;
+  font-size: 1.1rem;
+}
+
+
+/* gnb 서브 메뉴 리스트 */
+.head-gnb .menu-list {
+  display: none;
+  position: absolute;
+  top: 51px;
+  left: 0;
+}
+
+.head-gnb .menu-list .ctr-list {
+  position: relative;
+  box-sizing: border-box;
+  height: 580px;
+  padding: 7px 0 0 0;
+  border: 1px solid #121212;
+  background: #fff;
+}
+
+
+.head-gnb .menu-list .ctr-list ul {
+  overflow-y: auto;
+  overflow-x: visible;
+  width: 214px;
+  height: 442px;
+}
+
+.head-gnb .menu-list .ctr-list ul::-webkit-scrollbar {
+  width: 6px;
+}
+
+
+.head-gnb .menu-list .ctr-list ul::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: #c1c1c1;
+}
+
+.head-gnb .menu-list .ctr-list ul::-webkit-scrollbar-track {
+  border-radius: 3px;
+  box-shadow: inset 0px 0px 3px white;
+  background-color: #f1f1f1;
+}
+
+
+.head-gnb .menu-list .ctr-list ul li>a {
+  display: block;
+  overflow: hidden;
+  box-sizing: border-box;
+  width: 100%;
+  height: 34px;
+  padding: 0 18px 0 24px;
+  font-size: 14px;
+  line-height: 34px;
+  color: #121212;
+  font-weight: 400;
+  text-decoration: none;
+  white-space: nowrap;
+  word-wrap: normal;
+  text-overflow: ellipsis;
+}
+
+
+
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2 {
+  display: none;
+  position: absolute;
+  top: -1px;
+  left: 214px;
+  border-left: 1px solid #efefef;
+}
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li:hover>a {
+  background: #121212;
+  color: #fff;
+  font-weight: 500;
+}
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li:hover>.ctr-list.ctr-2 {
+  display: block;
+}
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li:hover>.ctr-list.ctr-2::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -7px;
+  bottom: 0;
+  width: 7px;
+  background: transparent;
+}
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li.on>a {
+  background: #121212;
+  color: #fff;
+  font-weight: 600;
+}
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2>ul {
+  height: 510px;
+}
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2>ul>li>a {
+  color: #666;
+}
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2>ul>li>.ctr-list.ctr-3 {
+  /* display: none; */
+  position: absolute;
+  top: -1px;
+  left: 214px;
+  border-left: 1px solid #efefef;
+}
+
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2>ul>li>.ctr-list.ctr-3::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -7px;
+  bottom: 0;
+  width: 7px;
+  background: transparent;
+}
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2>ul>li>.ctr-list.ctr-3>ul {
+  height: 510px;
+}
+
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2>ul>li>.ctr-list.ctr-3>ul {
+  overflow: hidden;
+  height: auto;
+}
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2>ul>li>.ctr-list.ctr-3>ul>li>a {
+  color: #666;
+}
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2>ul>li>.ctr-list.ctr-3>ul>li:hover>a {
+  color: #121212;
+  font-weight: 600;
+}
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2>ul>li:hover>a {
+  background: #efefef;
+  color: #121212;
+  font-weight: 600;
+}
+
+
+.head-gnb .menu-list .ctr-list.ctr-1>ul>li .ctr-list.ctr-2>ul>li:hover>.ctr-list.ctr-3 {
+  display: flex;
+}
+
+
+/* 채널메뉴 */
+.head-gnb .gnb-menu {
+  position: relative;
+  box-sizing: border-box;
+  width: 80%;
+  height: 51px;
+  margin: 0 auto;
+}
+
+.head-gnb .gnb-menu .gnb-list {
+  display: flex;
+
+}
+
+.head-gnb .gnb-menu .gnb-list>li {
+  position: relative;
+  padding: 0 50px;
+}
+
+.head-gnb .gnb-menu .gnb-list>li>a {
+  display: block;
+  font-size: 1.2rem;
+  box-sizing: border-box;
+  height: 52px;
+  padding: 0 4px;
+  border-bottom: 2px solid transparent;
+  line-height: 52px;
+  color: #121212;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.head-gnb .gnb-menu .gnb-list>li>a.on {
+  border-bottom: 2px solid #121212;
+}
+
+.head-gnb .gnb-menu .gnb-list>li>a.em {
+  font-weight: 500;
+}
+
+.head-gnb .gnb-menu .gnb-list>li:hover>a {
+  font-weight: 500;
+}
+
+.head-gnb .gnb-menu .gnb-list>li:hover>.menu-list {
+  display: block;
+  top: 51px;
+}
+
+.head-gnb .gnb-menu {
+  display: none;
+}
+
+.head-gnb .gnb-menu.gnb-store {
+  display: block;
+  padding: 0 0 0 216px;
+}
+
+/* 카테고리 메뉴 버튼 */
+.head-gnb .category-menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 101;
+}
+
+.head-gnb .category-menu .menu-btn {
+  display: block;
+  box-sizing: border-box;
+  width: 216px;
+  height: 53px;
+  margin-top: -1px;
+  padding: 15px 0 0 52px;
+  border: 1px solid #efefef;
+  line-height: 1.4;
+  color: #121212;
+  font-weight: 500;
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+
+.head-gnb .category-menu .menu-btn::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 19px;
+  left: 25px;
+  width: 19px;
+  height: 14px;
+  background: url() no-repeat -50px -73px;
+  background-size: 500px auto;
+}
+
+.head-gnb .category-menu:hover .menu-btn {
+  border-color: #121212;
+}
+
+.head-gnb .category-menu:hover .menu-list {
+  display: block;
+}
+
+*/
+/* 메인배너 */
+
+
+.pc_mainbanner {
+  width: 100%;
+  max-width: 1920px;
+  z-index: 0;
+  overflow: hidden;
+}
+
+
+.pc_mainbanner .swipe_banner_all {
+  /* overflow: inherit; */
+  position: relative;
+  /* border: 1px solid red; */
+}
+
+.swipe_main_banner .swiper-pagination {
+  width: 70px;
+  height: 34px;
+  background: rgba(0, 0, 0, 0.3);
+  /* left: inherit; */
+  bottom: 34px;
+  border-radius: 50px;
+  right: 45px;
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 15px;
+  line-height: 34px;
+}
+
+.swipe_main_banner .swiper-pagination .mainbanner_bar {
+  width: 2px;
+  height: 12px;
+  background-color: #fff;
+  display: inline-block;
+  margin: 0 3px;
+  transform: translate(1px, 1px)
+}
+
+.swipe_main_banner .swiper-pagination-current {
+  color: #fff !important;
+}
+
+.swipe_main_banner .swiper-progressbar {
+  height: 4px;
+  background: #e2e2e2;
+  bottom: 0;
+  border-radius: 50px;
+  left: 50%;
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 15px;
+  line-height: 30px;
+  z-index: 1;
+  /* transform: translateX(-50%); */
+  top: inherit;
+}
+
+/*슬라이드 기본값*/
+.swipe_main_banner .swiper-slide:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+.swipe_main_banner .swiper-slide a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.swipe_main_banner .swiper-slide .main_text .banner_main_tit {
+  display: block;
+  font-size: 47px;
+  line-height: 1.3;
+  font-weight: 600;
+  font-family: 'Pretendard-SemiBold';
+  height: 60px;
+  overflow: hidden;
+  width: 1000px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.swipe_main_banner .swiper-slide .main_text .banner_sub_tit {
+  display: block;
+  font-size: 24px;
+  line-height: 1.3;
+  font-family: 'Pretendard-Regular';
+  font-weight: 400;
+  margin-top: 25px;
+}
+
+.swipe_main_banner .swiper-slide .main_text .banner_date_tit {
+  display: block;
+  font-size: 20px;
+  line-height: 1.3;
+  font-family: 'Pretendard-Regular';
+  font-weight: 400;
+  margin-top: 45px;
+}
+
+/*메인 슬라이드*/
+.swipe_main_banner .swiper-slide-active:after {
+  display: none;
+}
+
+.swipe_main_banner .swiper-slide-active a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.swipe_main_banner .main_text {
+  color: #121212;
+  font-family: 'Pretendard-Regular';
+  position: absolute;
+  left: 7.5%;
+  top: 50%;
+  text-align: left;
+  display: block;
+  transform: translateY(-50%);
+  z-index: 10;
+}
+
+.swipe_main_banner .banner_main_tit {
+  font-size: 47px;
+  line-height: 110%;
+  font-weight: 600;
+  font-family: 'Pretendard-SemiBold';
+}
+
+.swipe_main_banner .banner_sub_tit {
+  text-align: left;
+}
+
+.swipe_main_banner .banner_date_tit {
+  font-size: 1.1vw;
+}
+
+/*슬라이드 화살표*/
+.swipe_main_banner .swiper-button-prev {
+  left: -125px;
+  background: url(http://oheimev.diskn.com/event/godomall/main/2023/pc/main_ar_right.png) no-repeat 0 0 / cover;
+  z-index: 10;
+  width: 122px;
+  height: 122px;
+  top: 50%;
+  transform: translateY(-50%) rotate(180deg);
+}
+
+.swipe_main_banner .swiper-button-next {
+  right: -125px;
+  background: url(http://oheimev.diskn.com/event/godomall/main/2023/pc/main_ar_right.png) no-repeat 0 0 / cover;
+  z-index: 10;
+  width: 122px;
+  height: 122px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.btns {
+  text-align: center;
+  position: absolute;
+  bottom: 30px;
+  right: 150px;
+  z-index: 99999;
+}
+
+
+.btns button {
+  width: 40px;
+  height: 40px;
+  font-size: 0;
+  background: transparent;
+  text-align: center;
+  border: none;
+}
+
+button.start:before {
+  content: "\ea3e";
+  font-family: "xeicon";
+  color: #333;
+  font-size: 1.6rem;
+}
+
+button.stop:before {
+  content: "\ea3b";
+  font-family: "xeicon";
+  color: #333;
+  font-size: 1.6rem;
+}
+
+
+button:hover {
+  cursor: pointer;
+}
+
+
+/*배너 타이틀 클래스 적용*/
+.black {
+  color: #121212 !important;
+}
+
+.white {
+  color: #fff !important;
+}
+
+
+
 
 
 /* 아이콘메뉴 */
@@ -137,7 +639,7 @@ form {
 
 
 #iconmenu {
-padding-top: 60px;
+  padding-top: 60px;
 
 }
 
@@ -169,80 +671,108 @@ padding-top: 60px;
 #iconmenu ul li:last-child {
   margin-right: 0;
 }
-.nav {
-  padding:10px 0;
-  border-bottom: 2px solid rgba(55,55,55,1);
-}
+
 #tab_wrapper {
-  width: 85%; margin:120px auto;
+  width: 85%;
+  margin: 120px auto;
 }
 
-.tab_menu {
+.tabs {
   width: 100%;
   display: flex;
   justify-content: space-around;
+  padding: 10px 0;
+  border-bottom: 2px solid rgba(55, 55, 55, 1);
 }
 
-.tab_menu li a {
-  font-size:1.2rem;
-  color:rgba(154,154,154,1);
+
+
+.tabs li a {
+  font-size: 1.2rem;
+  color: rgba(154, 154, 154, 1);
   font-weight: bold;
   display: block;
   padding: 0.5rem 0.8rem;
 }
 
-.tab menu li a.selcected {
-  color:rgba(0,0,0,1);
 
+
+.panel {
+  margin-top: 20px;
 }
-.tbtn {
-  display:flex;
+
+.nested_content {
+  /* display:flex;
+  justify-content:center; */
   width: 100%;
-  margin-top:50px;
+  margin: 50px auto;
+  text-align: center;
 }
 
-.tbtn li {
+
+.nested_content li {
+  margin-right: 20px;
+  float: left;
+}
+
+
+.nested_tabs {
+  width: 60%;
+}
+
+.nested_tabs li {
   margin-right: 2rem;
+  float: left;
 }
 
-.tbtn li a {
+.nested_tabs li a {
+  display: block;
   border-radius: 50px;
   font-size: 0.8rem;
   text-align: center;
   padding: 0.5rem 1.3rem;
   border: 2px solid #ebebebfc;
-    box-shadow:  0 2px 2px rgba(0,0,0, 0.2);
+  /* box-shadow:  0 2px 2px rgba(0,0,0, 0.3); */
 }
 
 
-.content {
-  width: 100%;
-  margin-top: 50px;
-  display:flex;
+.tabs li a.active {
+  color: rgba(0, 0, 0, 1);
+  font-style: italic;
 }
 
-.content li {
- margin-right:20px;
+
+.nested_tabs li a.active {
+  background: #000;
+  color: #fff;
 }
 
-.content li img {
-  width: 100%;
+/* 탭 컨텐츠 영역 */
+.tabs_content,
+.nested_content {
+  display: none;
+}
+
+/* 활성화된 탭 컨텐츠 영역을 표시 */
+.tabs_content.active,
+.nested_content.active {
+  display: block;
 }
 
 
 footer {
-  height:180px;
-  background:#454545;
-  font-size:0.7rem;
-  color:#fff;
-  line-height:1.13rem;
+  height: 180px;
+  background: #454545;
+  font-size: 0.7rem;
+  color: #fff;
+  line-height: 1.13rem;
 }
 
-.footer_wrapper{
-  width:80%;
-  height:100%;
-  margin:0 auto;
-  position:relative;
+.footer_wrapper {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  position: relative;
   padding: 50px 0;
 }
 
@@ -250,28 +780,29 @@ footer {
   float: left;
 }
 
-.footer_wrapper li::before{
+.footer_wrapper li::before {
   content: "|";
-  padding:0 6px;
-  
+  padding: 0 6px;
+
 }
 
-.footer_wrapper li:nth-child(1)::before{
-  display:none;
+.footer_wrapper li:nth-child(1)::before {
+  display: none;
 }
 
 .fmenu {
-  position:absolute;
-  right:0;
+  position: absolute;
+  right: 0;
   padding: 14px 0 0;
 }
 
 .fmenu p {
   font-weight: 500;
 }
+
 .finfo {
-  position:absolute;
-  left:0;
+  position: absolute;
+  left: 0;
 }
 
 
