--- a/market_B/marketB_project_mobile/css/tab.css
+++ b/market_B/marketB_project_mobile/css/tab.css
@@ -15,18 +15,37 @@ a {
   margin: 0 auto;
 }
 
-.Mheader {
-display:flex;
-justify-content: space-between;
-height:50px;
-position:relative;
-align-items: center;
+/* 모바일헤드 */
+
+.Pheader {
+  display:none;
 }
 
+.Mheader{
+  height:50px;
+  position:relative;
+  background:#fff;
+}
 
+.head-icon {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.head-icon span{
+  line-height: 50px;
+}
 .Mheader-right{
  display:flex;
  gap: 3vw;
+}
+
+h1 {
+ position:absolute;
+top:50%;
+left:50%;
+transform: translate(-50%,-50%);
 }
 
 h1 a {
@@ -34,15 +53,11 @@ h1 a {
   overflow: hidden;
   width:128.7px;
   height: 23.4px;
-  /* position: relative; */
-  /* width:28vw;
-  height:100%; */
   background: url(../image/logo.png) no-repeat;
   background-size: 100%;
   font-size: 0;
   line-height: 0;
   text-indent: -10000px;
-
 }
 
 header .material-symbols-outlined  {
@@ -50,12 +65,25 @@ header .material-symbols-outlined  {
   font-size:26px;
 }
 
-/* 슬라이드 */
-.M-mainbanner {
+/* [슬라이드] */
+
+
+/* 공통 */
+
+
+
+/* 추가 */
+
+
+
+/* 모바일 */
+.mainbanner {
  width:100%;
  height:32.5rem;
+ overflow: hidden;
 }
-.swiper-slide{
+
+.mainbanner .swiper-slide{
   width:100%;
   height:32.5rem;
   position:relative;
@@ -77,18 +105,46 @@ header .material-symbols-outlined  {
   background:url("../image/Mbanner.png") no-repeat 50% 0; background-size:cover;
 }
 
-#M-mainbanner .swiper-slide div {
-  position:absolute;
-  left:50%;
-  bottom:10%;
-  transform:translate(-50%,-10%);
+
+/* 글씨  */
+.mainbanner .maintext-wrapper {
+  color: #121212;
+  position: absolute;
+  left:14%;
+  bottom: 15%; 
+  /* transform: translateY(30% ); */
+  text-align: left;
+  z-index: 1;
 }
+
+.mainbanner .maintext-wrapper .banner_main_tit {
+  display: block;
+  /* font-size:4.36vw; */
+  font-size:5.23vw;
+  font-weight: 700;
+  overflow: hidden;
+  width: 1000px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-bottom:3vw;
+}
+
+
+.mainbanner .maintext-wrapper .banner_sub_tit {
+  display: block;
+  /* font-size: 2.5vw; */
+  font-size:3vw;
+  font-weight: 500;
+  text-align:left;
+}
+
 
 
 /* 페이지네이션 */
 
 .mainbanner {
   position:relative;
+  margin:0 auto;
 }
 
 .mainbanner .swiper-pagination {
@@ -116,30 +172,28 @@ header .material-symbols-outlined  {
   color: #fff !important;
 }
 
+
 .mainbanner .swiper-progressbar {
-   height: 4px;
+  height: 4px;
+  width:100%;
   background: #e2e2e2;
   bottom: 0;
   border-radius: 50px;
-  left: 50%;
   color: rgba(255, 255, 255, 0.4);
   font-size: 15px;
   line-height: 30px;
-  /* z-index: 1; */
-  /* top: inherit; */
+  z-index: 1;
+  top: inherit;
 }
 
 
-#pc-mainbanner {
-  display:none;
-}
 /* 아이콘 바로가기 메뉴 */
 
 
 #iconmenu{
 position:relative;
 padding:20px 0;
-margin-bottom:50px;
+margin-top:2.3vh;
 }
 
 .hidden{
@@ -147,7 +201,6 @@ margin-bottom:50px;
 }
 
 .multiple{
-  /* width:960px; */
   margin:0 auto;
   overflow:hidden;
 }
@@ -162,7 +215,7 @@ margin-bottom:50px;
   top:50%;
   transform:translateY(-50%);
   left: 0;
-  z-index:9999;
+  z-index:1;
 }
 
 
@@ -171,7 +224,7 @@ margin-bottom:50px;
   top:50%;
   transform:translateY(-50%);
   right: 0;
-  z-index:9999;
+  z-index:1;
 }
 
 .swiper-button-prev,.swiper-button-next{
@@ -386,9 +439,37 @@ figcaption {
 
 /* 태블릿화면 */
 @media screen and (min-width:576px) {
-  .container {
+  /* .container {
     max-width: 540px;
+  } */
+
+  /* 배너 */
+
+  
+  .mainbanner .maintext-wrapper .banner_main_tit {
+    display: block;
+    font-size:2.18rem;
+    font-weight: 700;
+    overflow: hidden;
+    width: 1000px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin-bottom:24px;
   }
+  
+  
+  .mainbanner .maintext-wrapper .banner_sub_tit {
+    display: block;
+    font-size: 1.25rem;
+    font-weight: 500;
+    text-align:left;
+  }
+  
+  /* 아이콘메뉴 */
+
+
+
+  /* 텝 */
 
   .Mtabs li a {
     font-size: 1.2rem;
@@ -432,19 +513,19 @@ figcaption {
 
 }
 
-@media screen and (min-width:768px) {
+/* @media screen and (min-width:768px) {
   .container {
     max-width: 720px;
   }
 
-}
+} */
 
-@media screen and (min-width:992px) {
+/* @media screen and (min-width:992px) {
   .container {
     max-width: 960px;
   }
 
-}
+} */
 
 /* pc화면 */
 @media screen and (min-width:1025px) {
@@ -452,11 +533,472 @@ figcaption {
   /* 해더 */
 
 .Mheader{display:none;}
+
+.Pheader {
+  display:block;
+}
+.Pheader{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:108px;
+  z-index:999;
+  background:#fff;
+  border-bottom:1px solid #ebebeb;
+}
+
+.head_gnb{
+  position:absolute;
+  left:0;
+  top:0;
+  opacity:0;
+  transition: 0.3s;
+  box-shadow: 0 2px 2px rgba(134, 134, 134, 0.1);
+}
+
+.head_gnb.active {
+  opacity:1;
+}
+
+.head {
+  position: relative;
+  display:flex;
+	justify-content: space-between;
+  flex-wrap: nowrap;
+  width:100%;
+  height:108px;
+}
+
+
+.head h1.logo {
+  font-size: 0;
+  line-height: 0;
+  position:absolute;
+  top:45%;
+  left:0;
+  transform:translateY(-45%);
+}
+
+.head h1.logo a {
+  display: block;
+  overflow: hidden;
+  width: 165px;
+  height: 30px;
+  background: url(../image/logo.png) no-repeat;
+  background-size: 100%;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -100000px;
+}
+
+.srch_wrapper {
+  display:flex;
+  position:relative;
+  min-width:657px;
+  position:absolute;
+  right:0;
+  top:50%;
+  transform:translateY(-50%);
+ }
+ 
+
+.search {
+  position:relative;
+}
+
+input {
+  border: none;
+  outline: none;
+  width: 360px;
+  height: 48px;
+  border-radius: 9px;
+  background-color:#e8e8e8 ;
+
+}
+
+.search_button{
+   border: none;
+   outline : none;
+   background-color: #e8e8e8;
+   position:absolute;
+   right:10px;
+   top:50%;
+   transform:translateY(-50%);
+}
+
+.head_icon {
+  display:flex;
+  text-align: center;
+  right:0;
+  margin-left:52px;
+  position:relative;
+  top:4px;
+}
+
+/* 슬라이드 */
+
+
+.mainbanner {
+ width:100%;
+ height:862px;
+ overflow: hidden;
+}
+
+.mainbanner .swiper-slide{
+  width:100%;
+  height:862px;
+  position:relative;
+}
+
+.Mbanner1{
+  background:url("../image/Pbanner1.jpg") no-repeat 50% 50%; background-size:cover;
+}
+
+.Mbanner2{
+  background:url("../image/Pbanner2.jpg") no-repeat 50% 50%; background-size:cover;
+}
+
+.Mbanner3{
+  background:url("../image/Pbanner3.jpg") no-repeat 50% 50%; background-size:cover;
+}
+
+.Mbanner4{
+  background:url("../image/Pbanner4.jpg") no-repeat 50% 50%; background-size:cover;
+}
+
+.mainbanner .swiper-slide a{
+  display:block;
+  height:100%;
+  height:100%;
+}
+
+.mainbanner .swiper-pagination {
+  position:absolute;
+  bottom: 34px;
+  right:9%;
+}
+.mainbanner .maintext-wrapper {
+  color: #121212;
+  position: absolute;
+  left:14%;
+  bottom: 50%; 
+  transform: translateY(50% );
+  text-align: left;
+  z-index: 1;
+}
+
+.mainbanner .maintext-wrapper .banner_main_tit {
+  display: block;
+  font-size:2.18rem;
+  font-weight: 700;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-bottom:24px;
+}
+
+
+.mainbanner .maintext-wrapper .banner_sub_tit {
+  display: block;
+  font-size: 1.25rem;
+  font-weight: 500;
+  text-align:left;
+}
+
+
+
+.mainbanner .button-wrapper{
+  position:absolute;
+  top:108px;
+  left:50%;
+  transform: translateX(-50%);
+  width:100%;
+  height:754px;
+  z-index:99;
+}
+
+
+
+
+/* 아이콘메뉴 */
+
+#iconmenu { margin-top:90px;}
+
+.icon {
+  margin-right:22px;
+}
+
+.icon:last-child {
+    margin-right:0;
+}
+
+span.txt {
+    display:block;
+    font-size:0.75rem;
+}
+
+.head_gnb {
+  position: relative;
+  z-index: 99;
+  height: 64px;
+  border-bottom: 1px solid #efefef;
+  background: #fff;
+  font-size: 1.1rem;
+}
+
+
+.head_gnb .menu-list {
+  display: none;
+  position: absolute;
+  top: 64px;
+  left: 0;
+  z-index:9999;
+}
+
+.head_gnb .menu-list .depth_list {
+  position: relative;
+  box-sizing: border-box;
+  height: 570px;
+  padding: 16px 0 0 0;
+  border: 1px solid #868686;
+  background: #fff;
+}
+
+.head_gnb .menu-list .depth_list ul {
+  overflow-y: auto;
+  overflow-x: visible;
+  width: 206px;
+  box-sizing: border-box;
+}
+
+
+.head_gnb .menu-list .depth_list ul li>a {
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  height: 40px;
+  padding: 0 18px 0 24px;
+  font-size: 0.87rem;
+  line-height: 38px;
+  color: #121212;
+  font-weight: 400;
+  text-decoration: none;
+  white-space: nowrap;
+  word-wrap: normal;
+  text-overflow: ellipsis;
+  box-sizing: border-box;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2 {
+  display: none;
+  position: absolute;
+  top: -1px;
+  left: 206px;
+  border-left: 1px solid #efefef;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li:hover>a {
+  background: #121212;
+  color: #fff;
+  font-family: 'Pretendard-Medium';
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li:hover>.depth_list.depth_2 {
+  display: block;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li:hover>.depth_list.depth_2::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -7px;
+  bottom: 0;
+  width: 7px;
+  background: transparent;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li.on>a {
+  background: #121212;
+  color: #fff;
+  font-weight: 600;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul {
+  height: 510px;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li>a {
+  color: #666;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li>.depth_list.depth_3 {
+  display: none;
+  position: absolute;
+  top: -1px;
+  left: 206px;
+  border-left: 1px solid #efefef;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li>.depth_list.depth_3::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -7px;
+  bottom: 0;
+  width: 7px;
+  background: transparent;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li>.depth_list.depth_3>ul {
+  height: 510px;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li>.depth_list.depth_3>ul {
+  overflow: hidden;
+  height: auto;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li>.depth_list.depth_3>ul>li>a {
+  color: #666;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li>.depth_list.depth_3>ul>li:hover>a {
+  color: #121212;
+  font-weight: 600;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li:hover>a {
+  background: #efefef;
+  color: #121212;
+  font-weight: 600;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li:hover>.depth_list.depth_3 {
+  display: block;
+  overflow-y: scroll;
+}
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li:hover>.depth_list.depth_3::-webkit-scrollbar {
+  width: 10px;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li:hover>.depth_list.depth_3::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: #c1c1c1;
+}
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2>ul>li:hover>.depth_list.depth_3::-webkit-scrollbar-track {
+  border-radius: 3px;
+  background-color: #f1f1f1;
+} 
+
+
+
+.head_gnb .menu-list .depth_list.depth_1>ul>li .depth_list.depth_2 .sale_2 {width:380px};
+
+.menu_banner{
+  position:relative;
+  height:470px;
+}
+
+.menu_banner img {
+ position:absolute;
+ top:30%;
+ left:50%;
+ transform:translate(-50%, -30%);
+}
+
+.head_gnb .gnb_menu {
+  position: relative;
+  box-sizing: border-box;
+  height:64px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.head_gnb .gnb_menu .gnb-list {
+  display: flex;
+  position : absolute;
+  top:0;
+  left:206px;
+}
+
+.head_gnb .gnb_menu .gnb-list>li {
+  position: relative;
+  padding: 0 50px;
+}
+
+.head_gnb .gnb_menu .gnb-list>li>a {
+  display: block;
+  font-size: 1.125rem;
+  box-sizing: border-box;
+  padding: 0 4px;
+  border-bottom: 2px solid transparent;
+  line-height: 64px;
+  color: #121212;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.head_gnb .gnb_menu .gnb-list>li>a.on {
+  border-bottom: 2px solid #121212;
+}
+
+.head_gnb .gnb_menu .gnb-list>li>a.em {
+  font-family: 'Pretendard-Medium';
+}
+
+.head_gnb .gnb_menu .gnb-list>li:hover>a {
+ font-weight:600;
+}
+
+.head_gnb .gnb_menu .gnb-list>li:hover>.menu-list {
+  display: block;
+}
+
+.head_gnb .product_menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 101;
+}
+
+.head_gnb .product_menu .menu_btn {
+  display: block;
+  box-sizing: border-box;
+  width: 206px;
+  height: 64px;
+  line-height:64px;
+  border: 1px solid #efefef;
+  font-weight: 500;
+  font-size: 1.125rem;
+  padding-left:24px;
+}
+
+.hamburger_icon {
+    position: relative;
+    top:5px;
+    padding-right:10px;
+}
+
+.head_gnb .product_menu:hover .menu_btn {
+  border-color: #121212;
+}
+
+.head_gnb .product_menu:hover .menu-list {
+  display: block;
+}
+
 /* 배너 */
 
-#M-mainbanner{
+/* #M-mainbanner{
   display:none;
-}
+} */
+
+
 
   /* 탭 */
 
